# TDP1-GoExplore-BackEnd

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  dockerfile  pymongo_get_database.py  pymongo_test_insert.py  pyproject.toml  todo_api.txt
app/: app.py  main.py  pymongo_test_query.py
app/api/ping/: views.py
app/commands/bookings/: __init__.py  bookings.py  errors.py
app/commands/experiencies/: __init__.py  errors.py  experiencies.py
app/commands/favourites/: favourites.py
app/commands/sessions/: __init__.py  errors.py  sessions.py
app/commands/users/: __init__.py  errors.py  users.py
app/config/: constants.py  logger.py
app/controllers/bookings/: views.py
app/controllers/experiencies/: views.py
app/controllers/favourites/: views.py
app/controllers/images/: views.py
app/controllers/ping/: views.py
app/controllers/sessions/: views.py
app/controllers/users/: views.py
app/controllers/utils/: __init__.py  reset.py
app/factories/: experience.py  image.py
app/models/: booking.py  errors.py  experience.py  favourite.py  image.py  user.py
app/parsers/: errors.py  image_parser.py  search_parser.py
app/repositories/: __init__.py  bookings.py  config.py  errors.py  experience.py  images.py  users.py
app/schemas/: bookings.py  experience.py  favourite.py  image.py  sessions.py  users.py
app/utils/: config.py  error.py
db/config/: mongod.conf
docker/: entrypoint.sh
test/: test_booking.py  test_experience.py  test_favourite.py  test_session.py  test_user.py  utils.py
