[tool.poetry]
name = "TDP-1 GoExplore"
version = "0.1.0"
description = "GoExplore Backend"
authors = [
    "Gianluca Belinche <gianbelinche@gmail.com>",
    "Julian Ventura <jventura@fi.uba.ar>"
]
packages = [
    { include = "app" },
    { include = "app/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pymongo = "^4.3.2"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov"]


[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
