[tool.poetry]
name = "TDP-1 GoExplore"
version = "0.1.0"
description = "GoExplore Backend"
authors = [
    "Gianluca Belinche <gianbelinche@gmail.com>",
    "Julian Ventura <jventura@fi.uba.ar>"
]
packages = [
    { include = "app" },
    { include = "test/**/*.py" },
    { include = "app/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
pymongo = "^4.3.2"
requests = "^2.28.1"
pytest = "^7.2.0"
pymongo-inmemory = "^0.2.11"
email-validator = "^1.3.0"
python-multipart = "^0.0.5"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov"]


[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
